--- a/src/App.css
+++ b/src/App.css
@@ -408,3 +408,54 @@ header{
 }
 
 /* post page end */
+
+/* login page start  */
+.loginPage{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.loginPage img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.loginPage .loginContainer{
+  width: 50%;
+  height: 80%;
+  display: flex;
+  position: absolute;
+  background-color: #fff;
+  border-radius: 50px;
+  padding: 50px;
+}
+.loginPage .loginContainer .loginSection{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+.loginPage .login-logo{
+  width: 200px;
+  height: auto;
+  margin-bottom: 45px;
+}
+.loginPage .login-welcome{
+  font-size: 2.5em;
+  color: darkblue;
+  letter-spacing: 2px;
+  margin-bottom: 30px;
+  font-weight: 600;
+}
+.loginPage .loginSection label{
+  font-size: 1.3em;
+  font-weight: 400;
+  color: #333;
+  letter-spacing: 1px;
+}
+/* login page end */
