--- a/src/App.css
+++ b/src/App.css
@@ -458,4 +458,21 @@ header{
   color: #333;
   letter-spacing: 1px;
 }
+.loginPage .loginSection input{
+  width: 100%;
+  height: 50px;
+  margin-bottom: 15px;
+  border-radius: 10px;
+  border: 1px solid darkblue;
+}
+.loginPage .loginSection .login-btn{
+  display: block;
+  width: 100%;
+  padding: 15px 10px;
+  cursor: pointer;
+  background-color: darkblue;
+  color: #fff;
+  border-radius: 10px;
+  margin-top: 20px;
+}
 /* login page end */
